# Privora

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  MARKETING.md  PLAN.md  PRIVACY.md  README.md  SECURITY.md  STATUS.md  THREAT_MODEL.md  gradlew  gradlew.bat  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: misspellings.txt
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_widget_assistant.xml  ic_widget_camera.xml  ic_widget_reminder.xml  widget_bg.xml  widget_bg_assistant.xml  widget_bg_note.xml  widget_bg_reminder.xml
app/src/main/res/layout/: widget_action.xml  widget_quick_access.xml  widget_quick_access_xl.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: backup_rules.xml  locales_config.xml  widget_assistant_info.xml  widget_info.xml  widget_quick_access_xl_info.xml  (+2 more)
core/: CMakeLists.txt
core/include/: ai_engine.h  detector.h
core/src/: ai_engine.cpp  detector.cpp
docs/: vision-crash-0.11.0.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fdroid/: README.md  com.privateai.camera.yml
gradle/: libs.versions.toml
scripts/: export_facenet.py  export_mobilenet.py
(+146 files in other folders)
